# keywords

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  circleci.yml  docker-compose.yml  pytest.ini  requirements.txt  setup.py
.circleci/: config.yml
keyword-tools/: Cargo.toml  README.md  lib.rs
keyword-tools/mecab/: mod.rs
keyword-tools/mecab/dic/: user_dic.csv
keyword-tools/rsc/: mod.rs  tests.rs
keywords/: __init__.py  keywords.py  metrics.py  utils.py
keywords/rsc/: cv_keywords.json  graph_keywords.json  ict_keywords.json  ja_keywords.json  ml_keywords.json  nlp_keywords.json  security_keywords.json
python/keywords/: __init__.py
rust/: lib.rs
rust/mecab/: mod.rs  tests.rs
rust/rsc/: mod.rs  rsc.json  tests.rs
src/: __init__.py  lib.rs
src/mecab/: mod.rs  tests.rs
src/rsc/: mod.rs  rsc.json  tests.rs
tests/: test_extract_keywords.py  test_keywords.py  test_specialization_factor.py  test_tfidf.py
