[workspace]
resolver = "2"
members = ["keyword-tools"]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["akitenkrad"]
description = "Rust tools for keyword extraction and similarity search"
repository = "https://github.com/akitenkrad/keywords.git"
license = "MIT"

[workspace.dependencies]

[workspace.metadata.release]
tag-prefix = ""
